@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.417 2003-04-07 21:07:46 castaglia Exp $
+$Id: NEWS,v 1.418 2003-04-08 18:47:06 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -101,6 +101,8 @@ CVS
   disable ftptop's use of ncurses or curses, as needed.
 - Bug 2016 - man pages should be autogenerated to reflect the --prefix used.
 - Bug 2018 - Incorrect caching of TransferRate values.
+- Bug 1813 - configure code: mistake in BSD sendfile semantic detection.
+- Bug 2019 - proftpd support for Solaris 8/9 native sendfile
 
 1.2.8 - Released 04-Mar-2003
 ---------------------------------
